attached_assets/Pasted-INFO-payment-reminder-PAYMENT-TRACKER-Reminder-threshold-10-minutes-INFO-payment-reminder-PAYME-1746255791533.txt
INFO:payment_reminder:[PAYMENT_TRACKER] Reminder threshold: 10 minutes
INFO:payment_reminder:[PAYMENT_TRACKER] Expiration threshold: 30 minutes
INFO:payment_reminder:[PAYMENT_TRACKER] SMS API endpoint: https://neto-contatonxcase.replit.app/api/manual-notification
INFO:payment_reminder:[PAYMENT_TRACKER] =====================================================
[2025-05-03 07:01:23 +0000] [3018] [INFO] Worker reloading: /home/runner/workspace/app.py modified
[2025-05-03 07:01:23 +0000] [3018] [INFO] Worker exiting (pid: 3018)
[2025-05-03 07:01:23 +0000] [3082] [INFO] Booting worker with pid: 3082
[2025-05-03 07:01:23 +0000] [3082] [ERROR] invalid syntax (app.py, line 1307)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 5, in <module>
    from app import app, db
  File "/home/runner/workspace/app.py", line 1307
    else:
    ^^^^
SyntaxError: invalid syntax
[2025-05-03 07:02:31 +0000] [2731] [INFO] Handling signal: winch